choice editor/search def editor - refinement